# tgcli

./: .gitignore  Cargo.toml  README.md  REFERENCE.md  SKILL.md  install.sh  justfile
.github/workflows/: ci.yaml  release.yaml
Formula/: tgcli.rb
contrib/: README.md
contrib/linux/: tgcli-sync.service
contrib/macos/: com.tgcli.sync.plist  com.tgcli.sync.work.plist
docs/: DAEMON.md  output-api-design.md
src/: error.rs  main.rs  shutdown.rs  webhook.rs
src/app/: mod.rs  send.rs  socket.rs  sync.rs
src/cmd/: auth.rs  chats.rs  clear.rs  completions.rs  contacts.rs  daemon.rs  daemon_service.rs  delete.rs  drafts.rs  export.rs  folders.rs  hook.rs  messages.rs  mod.rs  polls.rs  profile.rs  read.rs  send.rs  stickers.rs  sync.rs  topics.rs  typing.rs  users.rs  version.rs  wipe.rs
src/rpc/: mod.rs  server.rs
src/store/: mod.rs
src/tg/: mod.rs
