[package]
name = "tgcli"
version = "0.3.6"
edition = "2021"
authors = ["Dario <me@dgrp.es>"]
description = "Telegram CLI tool using grammers (pure Rust MTProto)"
license = "MIT"
repository = "https://github.com/dgrr/tgcli"
homepage = "https://github.com/dgrr/tgcli"
keywords = ["telegram", "cli", "mtproto", "grammers"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "tgcli"
path = "src/main.rs"

[dependencies]
grammers-client = { version = "0.8", features = ["fs"] }
grammers-session = "0.8"
grammers-tl-types = "0.8"
grammers-mtsender = "0.8"
turso = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rpassword = "7"
base64 = "0.22"
rand = "0.9.2"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# RPC server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["net"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

[profile.release]
opt-level = 3
# lto = true
strip = true
